2005-02-02  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_font.c doc/public/cairo-sections.txt
	doc/public/Makefile.am: Add windows functions to the docs.

2005-02-02  Owen Taylor  <otaylor@redhat.com>

	* src/cairo_win32_font.c (cairo_win32_font_select_font,
	cairo_win32_release_font, cairo_win32_font_get_scale_factor):
	Add some functions to select the font into a device context
	with the intention to enable callers to use, e.g, Uniscribe.

	* src/cairo_win32_font.c: Use 'hdc' not 'dc' for param/variable
	name.

2005-02-02 Owen Taylor <otaylor@redhat.com>

	* src/cairo_win32_font.c (cairo_win32_font_select_font,
	cairo_win32_release_font, cairo_win32_font_get_scale_factor):
	Add some functions to select the font into a device context
	with the intention to enable callers to use, e.g, Uniscribe.

	* src/cairo_win32_font.c: Use 'hdc' not 'dc' for param/variable
	name.

	* src/cairo_win32_font.c (_cairo_win32_font_show_glyphs): Return
	immediately if height or width is 0.

2005-02-02 Owen Taylor <otaylor@redhat.com>

	* src/cairo_win32_font.c: Mostly-functioning Win32 font backend;
	no glyph paths yet.

	* configure.in: Turn on building of the Win32 font backend.

	* src/cairo-win32-private.h src/Makefile.am: Private header for
	the Win32 backend.

	* src/cairo-win32-private.h src/cairo_win32_surface.c: 
	Internally export _cairo_win32_print_gdi_error() for use
	in the font code.

	* src/cairo-win32-private.h src/cairo_win32_surface.c: 
	Add _cairo_win32_surface_create_dib to create a DIB surface.

	src/cairo-win32-private.h src/cairo_win32_surface.c: 
	Add _cairo_surface_is_win32()

	* configure.in: Check for vasnprintf.

	* test/cairo_test.c (xasprintf): Add a simple fixed-buffer size
	snprintf fallback in the absence of vasnprintf.

2005-02-01  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_pdf_surface.c (_cairo_pdf_surface_composite): Pretend
	we support compositing of solid color or gradient patterns to
	prevent image fallback.